2012-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	 * pdftexextra.c [W32TeX]: #define DLLPROC for pdftex.dll.

2012-06-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c [__MINGW32__]: #include <regex.h> as for Unix instead
	of <regex/regex.h>.
	* am/libpdftex.am (libpdftex_a_CPPFLAGS): Change accordingly.

2012-06-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftosrc.cc: Use XRef::getNumObjects instead of XRef::getSize,
	required for poppler >= 0.19.0.

2012-05-20  Thanh Han The  <thanh@river-valley.org>

	* pdftex.defines (get/setimagegroupref): these replace imagegroupref.
	* ptexlib.h: likewise.
	* writeimg.c: define them, and check for page group
	without object number.
	* pdftex.web: change calls.
	* pdftoepdf.cc: more page-group changes.
	This is all related to http://bugs.debian.org/672951.

2012-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.web: Adapted to e-TeX Version 2.4.

2012-04-15  Karl Berry  <karl@tug.org>

	* pdftex.web (pdftex_revision, pdftex_version_string)

2012-04-12  Thanh Han The  <thanh@river-valley.org>

	* ttf2afm.c (print_str): new macro, replacing function.
	(escape_eol): new fn, replacing print_str, now returning a string.

	* writettf.c (ttf_reindex_glyphs): use %n to sscanf forms
	uniABCD and index123. 

	* mapfile.c (suppress_warn): way to avoid dup warnings.
	
	* pdftex.web (pdf_suppress_warning_dup_dest_code,
	pdf_suppress_warning_dup_dest_code): new primitives
	\pdfsuppresswarningdupdest and \pdfsuppresswarningdupmap.
	(get_pdf_suppress_warning_dup_map): new fn.
	(warn_dest_dup): check pdf_suppress_warning_dup_dest.

2012-04-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.web: Fixed a typo in TeX text (for e-TeX).

2012-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writejbig2.c (getstreamlen): Change type to `off_t'.
	Use LONGINTEGER_TYPE and LONGINTEGER_PRId for printing.

2012-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Consistent support for large JBIG2 files.